# ApplianceGuard

./: .gitignore  Makefile  README.md  debug_artifacts.py  merge_artifacts.py  old_artifacts.pkl  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
appliance_guard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
configs/: config.yaml
dashboard/: app.py
docker/: Dockerfile.app
models/artifacts/: graph_structure.pkl
models/saved/: gcn_embeddings.pt
scripts/: build_graph.py  inference.py  train.py
src/data/: dataset.py  make_dataset.py
src/features/: extraction.py
src/graph/: builder.py
src/models/: gcn.py  layers.py  transformer.py
src/training/: trainer.py
src/visualization/: plots.py
tests/: test_model.py
