[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "appliance_guard"
version = "0.1.0"
description = "Intelligent Appliance Monitoring System using GNNs and Transformers"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "networkx",
    "scipy",
    "pyyaml",
    "streamlit",
    "torch-geometric" 
]

[tool.setuptools.packages.find]
where = ["."]  # Scans for the 'src' folder automatically
include = ["src*"]